removing console log

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "trustvox",
-  "vendor": "codebluepartnerbr",
+  "vendor": "{account}",
   "version": "0.0.1",
   "title": "RA Trustvox",
   "description": "Integrates with RA Trustvox",
